syntax = "proto3";

package proto;

option go_package = "CourseEnrollment/pkg/proto";

// Weekday is a day in week
enum Weekday {
  SATURDAY = 0;
  SUNDAY = 1;
  MONDAY = 2;
  TUESDAY = 3;
  WEDNESDAY = 4;
  THURSDAY = 5;
  FRIDAY = 6;
}

// ClassTime contains a single time which class is held.
// An array of it holds the days and times which class is held.
message ClassTime {
  // On what day?
  Weekday day = 1;
  // Starting minute from 00:00
  uint32 start_minute = 2;
  // Ending minute from 00:00
  uint32 end_minute = 3;
}